@@ -8,7 +8,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: encoding.test,v 1.18.2.9 2008/06/26 04:07:42 dgp Exp $
+# RCS: @(#) $Id: encoding.test,v 1.18.2.10 2009/11/16 18:04:05 dgp Exp $
 
 package require tcltest 2
 
@@ -414,9 +414,10 @@ test encoding-24.2 {EscapeFreeProc on open channels} -constraints {
 } -setup {
     # Bug #524674 output
     set file [makeFile {
+	encoding system cp1252;	# Bug #2891556 crash revelator
 	fconfigure stdout -encoding iso2022-jp
 	puts ab\u4e4e\u68d9g
-	exit
+	testfinexit
     } iso2022.tcl]
 } -body {
     viewable [exec [interpreter] $file]
